examples/next-starter/tools/infrastructure/container-based/ochestration/kubernetes/bases/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-starter-service
  namespace: next-starter-namespace
  labels:
    app: next-starter
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: next-starter
