examples/next-starter/tools/infrastructure/container-based/ochestration/kubernetes/bases/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-starter
  namespace: next-starter-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: dev.next-starter.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-starter-service
                port:
                  number: 80
